// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`step2 - removeThemePreludes (snapshots) > case a button > a button 1`] = `
"@reference "../../../global.css";
@import "./shared.css";

@layer components {
  .btn.variant-primary {
    color: var(--primary-foreground);
    &:focus-visible {
      outline: 2px solid var(--primary-ring);
    }
  }
  .btn.variant-primary {
    box-shadow: var(--shadow-sm);
    background-color: var(--primary-background);
    &:hover {
      transform: scale(0.99);
    }
  }
  .btn.variant-secondary {
    background-color: var(--secondary-background);
    color: var(--secondary-foreground);
    &:focus-visible {
      outline: 2px solid var(--secondary-ring);
    }
  }
  .btn.variant-secondary {
    box-shadow: var(--shadow-sm);
    &:hover {
      transform: scale(0.99);
    }
  }
  .btn.variant-outline {
    background-color: var(--background);
    color: var(--foreground);
    &:focus-visible {
      outline: 2px solid var(--secondary-ring);
    }
  }
  .btn.variant-outline {
    box-shadow: var(--shadow-sm);
    border: var(--default-border-width) solid var(--border);
    &:hover {
      transform: scale(0.99);
    }
  }
  .btn.variant-link {
    color: var(--primary-standalone);
    &:hover {
      text-decoration: underline;
    }
    &:focus-visible {
      outline: 2px solid var(--secondary-ring);
    }
  }
  .btn.variant-link {
  }
  .btn.variant-ghost {
    border-radius: var(--radius-xl);
    color: var(--foreground);
    &:hover {
      background-color: var(--background-accent);
      color: var(--foreground-accent);
    }
    &:focus-visible {
      outline: 2px solid var(--ring);
    }
  }
  .btn.variant-ghost {
  }
  .btn.variant-vanilla {
    color: var(--foreground);
    &:focus-visible {
      outline: 2px solid var(--secondary-ring);
    }
  }
  .btn.variant-vanilla {
  }
  .btn.variant-alert {
    box-shadow: var(--shadow-sm) var(--alert-shadow);
    border: var(--default-border-width) solid var(--alert-border);
    background-color: var(--alert-background);
    color: var(--alert-foreground);
    &:hover {
      transform: scale(0.99);
    }
    &:focus-visible {
      outline: 2px solid var(--alert-ring);
    }
  }
  .btn.variant-alert {
  }
  .btn.size-sm {
    gap: 0.375rem;
    padding: 0 0.75rem;
    height: 2rem;
    &:has(> svg) {
      padding: 0 0.625rem;
    }
  }
  .btn.size-md {
    padding: 0.5rem 1rem;
    height: 2.25rem;
    &:has(> svg) {
      padding: 0.5rem 0.75rem;
    }
  }
  .btn.size-lg {
    padding: 0 1.5rem;
    height: 2.5rem;
    &:has(> svg) {
      padding: 0 1rem;
    }
  }
}"
`;

exports[`step2 - removeThemePreludes (snapshots) > case basic > basic 1`] = `
"@reference "../../../global.css";
@import "./shared.css";

@layer components {
  .btn {
    color: red;
  }
  .btn {
    color: green;
  }
}

@theme {
  --theme-var: var(--color-red);
}

@media (max-width: 768px) {
  .test {
    color: yellow;
  }
}"
`;

exports[`step2 - removeThemePreludes (snapshots) > case class-selectors > class-selectors 1`] = `
"@layer components {
  .btn {
    color: red;
    background-color: blue;
    padding: 8px;
  }
  .btn {
    color: green;
    border: 1px solid red;
  }
}"
`;

exports[`step2 - removeThemePreludes (snapshots) > case comma-separated > comma-separated 1`] = `
"@layer components {
  .btn,
  .icon-btn {
    color: red;
  }
  .btn,
  .icon-btn {
    color: green;
  }
}"
`;

exports[`step2 - removeThemePreludes (snapshots) > case dark-variants > dark-variants 1`] = `
"@layer components {
  .btn {
    color: red;
  }
  .btn {
    color: yellow;
  }
  .dark .btn {
    color: pink;
  }
  .dark .btn {
    color: purple;
  }
}"
`;

exports[`step2 - removeThemePreludes (snapshots) > case media-queries-in-selectors > media-queries-in-selectors 1`] = `
"@layer components {
  .btn {
    color: red;
    @media (max-width: 768px) {
      color: yellow;
    }
  }
  .btn {
    color: green;
  }
}"
`;

exports[`step2 - removeThemePreludes (snapshots) > case mixed-selector-list > mixed-selector-list 1`] = `
"@layer components {
  .btn {
    color: red;
  }
}"
`;

exports[`step2 - removeThemePreludes (snapshots) > case nested-selectors > nested-selectors 1`] = `
"@layer components {
  .btn {
    color: red;
    background-color: blue;
    &:focus-visible {
      outline: 2px solid red;
    }
    &:active {
      transform: translate(2px, 2px);
    }
  }
  .btn {
    color: green;
    border: 1px solid red;
    &:hover {
      transform: scale(0.99);
    }
    &:active {
      transform: translate(-2px, -2px);
    }
  }
}"
`;

exports[`step2 - removeThemePreludes (snapshots) > case recursively-nested-selectors > recursively-nested-selectors 1`] = `
"@layer components {
  .btn {
    color: red;
    background-color: blue;
    &:focus-visible {
      outline: 2px solid red;
      &:active {
        transform: translate(2px, 2px);
      }
    }
  }
  .btn {
    color: green;
    border: 1px solid red;
    &:hover {
      transform: scale(0.99);
    }
    &:active {
      transform: translate(-2px, -2px);
    }
  }
}"
`;

exports[`step2 - removeThemePreludes (snapshots) > case theme-class-not-leading > theme-class-not-leading 1`] = `
"@layer components {
  .container .btn {
    color: green;
  }
}"
`;
